# shared-clipboard

./: .gitmodules  README.txt
linux_client/: CMakeLists.txt  client.cpp  client.h  clipboard.cpp  clipboard.h  main.cpp  server.cpp  server.h
windows_client/: CMakeLists.txt  client.cpp  client.h  main.cpp  server.cpp  server.h
